@@ -18,6 +18,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18983: Allow selection of output units in timeit.
+  Patch by Serhiy Storchaka.
+
 - Issue #23631: Fix traceback.format_list when a traceback has been mutated.
 
 - Issue #23568: Add rdivmod support to MagicMock() objects.
